--- a/portal/static/css/eproms.css
+++ b/portal/static/css/eproms.css
@@ -229,9 +229,9 @@ select:not([multiple]) {
   z-index: 20;
   position: relative;
 }
-#iqFooterWrapper .footerWrapper { 
-  display: none; 
-  border-top: solid 1px #eee; 
+#iqFooterWrapper {
+  display: none;
+  border-top: solid 1px #eee;
   margin-top: 2em;
 }
 #mainHolder {
@@ -273,10 +273,12 @@ select:not([multiple]) {
 #mainDiv.profile .logo-container {
   margin: auto;
 }
+/******
 #mainDiv.profile .footer-wrapper {
   margin-left: 25%;
   position: inherit !important;
 }
+******/
 #mainDiv.profile .footer-container.flex {
   clear: both;
   display:flex;
@@ -400,8 +402,9 @@ body.open-nav .left-panel {
 }
 div.right-panel {
   position: relative;
-  transition: margin-left ease 0.5s;
+  transition: margin ease 0.5s;
   max-width: 991px;
+  margin: auto;
 }
 /***** initial queries page style ****/
 #aboutForm {
@@ -1380,7 +1383,7 @@ div.right-panel {
 .profile-item-container {
   background-color: #EFF5F3;
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
-  padding: 1.5em 2.5em 3.5em 2.5em;
+  padding: 2em 3em 3.5em 3em;
   margin: 0.5em auto;
   border: 2px solid #bcc2a6;
   overflow-y: hidden;
@@ -1400,11 +1403,14 @@ div.right-panel {
 #profileProcedureContainer table {
   border: 0;
 }
+#tnthproc-submit {
+  height: 2.9em;
+}
 
 #mainDiv.profile .profile-item-edit-btn {
   position: absolute;
-  top: 2em;
-  right: 2em;
+  top: 2.5em;
+  right: 3em;
   margin-right: 1em;
   z-index: 10;
   height: 2.5em;
@@ -1451,7 +1457,7 @@ div.right-panel {
   position: relative;
 }
 #mainDiv.profile .profile-item-container .view-container td {
-  padding: 0.6em 1em;
+  padding: 0.6em 1.5em 0.6em 0;
 }
 #mainDiv.profile .profile-item-container .view-container td:first-of-type {
   display: inline-block;
@@ -1676,6 +1682,9 @@ div.noOrg-container span {
   width: 250px;
   max-width: 100%;
 }
+#profileStudyIDContainer {
+  margin-bottom: 2em;
+}
 #profileStudyIDContainer input {
   width: 30%;
   max-width: 100%;
@@ -1737,6 +1746,13 @@ table.profile-audit-log TH,
 #userAssessementReport table {
   word-break: break-all;
   font-size: 0.94em;
+}
+.terms-container {
+  border-style:ridge;
+  max-height: 250px;
+  overflow: auto;
+  padding: 1em;
+  background-color:#F5F5F5;
 }
 #termsText {
   padding: 0 1em;
@@ -2014,7 +2030,7 @@ table.profile-audit-log TH,
   margin-right: 7px;
 }
 .radio-inline input[type=radio] {
-  margin-left: -20px;
+  margin-left: -18px;
 }
 div.biopsy-option:last-of-type{
   margin-top: 1px;
@@ -2167,6 +2183,9 @@ sub.pointer:hover {
 }
 #profileConsentList .consentlist-cell {
   background-color: #fbf9f9;
+}
+#consentListLoad {
+  margin-top: 1em;
 }
 .btn-delete-consent,
 .btn-add-consent {
@@ -2322,6 +2341,7 @@ div.timezone-warning.text-warning {
   .btn-tnth-primary  {
     font-size: 0.95em;
   }
+  /**************
   #indexNavBar {
     display: block;
     padding-top: 0.1em;
@@ -2337,7 +2357,7 @@ div.timezone-warning.text-warning {
     display: inline-block;
     position: relative;
     top: 3px;
-  }
+  }*************/
   #wellContainer .tnth-well {
     height: 60%;
   }
@@ -2499,21 +2519,23 @@ div.timezone-warning.text-warning {
     font-size: 24px;
   }
 }
+/************
 @media (max-width: 827px) {
   div.right-panel {
     margin-left: 0 !important;
   }
-}
+}*************/
 @media (min-width: 828px) {
   #indexNavBar,
   #indexContainer {
     display: none;
   }
+  /**************
   div.left-panel,
   a.back,
   a.open {
     display: block;
-  }
+  }****************/
 }
 @media (min-width: 991px) {
   #mainNav {
