--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -187,9 +187,9 @@ select:not([multiple]) {
   color: #FFF;
   background-color: #576e76;
 }
-#iqFooterWrapper .footerWrapper { 
-  display: none; 
-  border-top: solid 1px #eee; 
+#iqFooterWrapper {
+  display: none;
+  border-top: solid 1px #eee;
   margin-top: 2em;
 }
 #mainHolder {
@@ -227,10 +227,12 @@ select:not([multiple]) {
 #mainDiv.profile .logo-container {
   margin: auto;
 }
+/*********
 #mainDiv.profile .footer-wrapper {
   margin-left: 25%;
   position: inherit !important;
 }
+********/
 #mainDiv.profile .footer-container.flex {
   clear: both;
   display:flex;
@@ -339,8 +341,9 @@ body.open-nav .left-panel {
 }
 div.right-panel {
   position: relative;
-  transition: margin-left ease 0.5s;
+  transition: margin ease 0.5s;
   max-width: 991px;
+  margin: auto;
 }
 h4.detail-title {
   display: none;
@@ -753,8 +756,8 @@ h4.detail-title {
   width: 100%;
   max-width: 100%;
   color: #575F5C;
-  border-top: 1px solid #9E9E9E;
-  border-bottom: 1px solid  #9E9E9E;
+  /*border-top: 1px solid #9E9E9E;*/
+  border-bottom: 1px solid  #7b7a7a;
   padding: 0.7em 0.2em 0.83em 0.2em;
   vertical-align: center;
 }
@@ -794,6 +797,14 @@ h4.detail-title {
   text-decoration: none;
   letter-spacing: 1px;
   text-transform: uppercase;
+  min-height: 3em;
+}
+@media (max-width: 640px) {
+  #indexNavBar span.link {
+    position: relative;
+    top: 0.45em;
+    padding: 0.5em 1em;
+  }
 }
 #indexNavBar span.link a {
   color: #FFF;
@@ -1171,15 +1182,15 @@ h4.detail-title {
 .profile-item-container {
   background-color: #EFF5F3;
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
-  padding: 1.5em 2.5em 3.5em 2.5em;
+  padding: 2em 3em 3.5em 3em;
   margin: 0.5em auto;
   border: 2px solid #bcc2a6;
   max-width: 100%;
 }
 #mainDiv.profile .profile-item-edit-btn {
   position: absolute;
-  top: 2em;
-  right: 2em;
+  top: 2.5em;
+  right: 3em;
   margin-right: 1em;
   z-index: 200;
   height: 2.5em;
@@ -1235,7 +1246,7 @@ h4.detail-title {
   display: block;
 }
 #mainDiv.profile .profile-item-container .view-container td {
-  padding: 0.6em 1em;
+  padding: 0.6em 1.5em 0.6em 0;
 }
 #mainDiv.profile .profile-item-container .view-container tr.study-id-view td {
   padding: 0.6em 1em 0 1em;
@@ -1281,6 +1292,9 @@ h4.detail-title {
   width: 300px;
   max-width: 100%;
   padding: 1em 0;
+}
+.deceased-date-container {
+  margin-top:-8px
 }
 .communication-prompt {
   margin-bottom: 1em;
@@ -1537,6 +1551,13 @@ table.profile-audit-log TH,
 #userAssessementReport table {
   word-break: break-all;
   font-size: 0.94em;
+}
+.terms-container {
+  border-style:ridge;
+  max-height: 250px;
+  overflow: auto;
+  padding: 1em;
+  background-color:#F5F5F5;
 }
 #termsText {
   padding: 0 1em;
@@ -1807,7 +1828,7 @@ table.profile-audit-log TH,
 .radio input[type=radio] {
   position: relative;
   left: 3px;
-  margin-right: 6px;
+  margin-right: 8px;
 }
 .radio-inline input[type=radio] {
 	margin-left: -18px;
@@ -1964,6 +1985,9 @@ sub.pointer:hover {
 #profileConsentList .consentlist-cell {
   background-color: #fbf9f9;
 }
+#consentListLoad {
+  margin-top: 1em;
+}
 .btn-delete-consent,
 .btn-add-consent {
   color: #8a8e90;
@@ -2045,6 +2069,9 @@ div.org-container input[type="checkbox"] {
 #profileProcedureContainer #pastTreatmentsContainer,
 #profileProcedureContainer #eventListLoad {
   display: none;
+}
+#tnthproc-submit {
+  height: 2.9em;
 }
 #eventListtnthproc {
   margin-left: 0.5em;
@@ -2334,11 +2361,12 @@ div.timezone-warning.text-warning {
   #indexContainer {
     display: none;
   }
+  /**************
   div.left-panel,
   a.back,
   a.open {
     display: block;
-  }
+  }***********/
 }
 @media (min-width: 991px) {
   #mainNav {
