--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -184,6 +184,9 @@ a.btn {
     display: inline-block !important;
   }
 }
+#consentListLoad {
+  margin-top: 1em;
+}
 .consent-date-modal.fade {
     -webkit-transition: opacity .7s ease-out !important;
     -o-transition: opacity .7s ease-out !important;
@@ -285,7 +288,7 @@ select:not([multiple]) {
   z-index: 20;
   position: relative;
 }
-#iqFooterWrapper .footerWrapper { 
+#iqFooterWrapper { 
   display: none; 
   border-top: solid 1px #eee; 
   margin-top: 2em;
@@ -321,10 +324,12 @@ select:not([multiple]) {
   .copyright-container {
     font-size: 0.9em;
   }
+  /*****
   .footer-wrapper {
     margin-left: 25%;
     position: inherit !important;
   }
+  *****/
   .footer-container.flex {
     clear: both;
     display:flex;
@@ -455,14 +460,23 @@ body.open-nav .left-panel {
 }
 div.right-panel {
   position:relative;
-  transition:margin-left ease .5s;
+  transition:margin ease .5s;
   border: 2px solid rgba(121, 121, 121, 1);
   max-width: 991px;
+  margin: auto;
 }
 #topTerms ~ #aboutForm {
   margin: 1em auto;
   min-height: 50vh;
 }
+.terms-container {
+  border-style:ridge;
+  max-height: 250px;
+  overflow: auto;
+  padding: 1em;
+  background-color:#F5F5F5;
+}
+
 #aboutForm {
   .reg-buttons-msg-wrapper {
     width: 500px;
@@ -1478,7 +1492,7 @@ div.right-panel {
   /*background-color: rgba(173, 193, 197, 0.16);*/
   /*background-color: rgba(204, 206, 204, 0.25);*/
   background-image: linear-gradient(to top, #e8e8e8 0%, #f5f5f5 100%);
-  padding: 1.5em 2.5em 3.5em 2.5em;
+  padding: 2em 3em 3.5em 3em;
   margin: 0.5em auto;
   border: 2px solid #bcc2a6;
   overflow-y: hidden;
@@ -1498,6 +1512,9 @@ div.right-panel {
 #profileProcedureContainer table {
   border: 0;
 }
+#tnthproc-submit {
+  height: 2.9em;
+}
 .profile-item-title {
   color: @sectionTitleColor;
   margin-bottom: 1.5em;
@@ -1505,8 +1522,8 @@ div.right-panel {
 }
 #mainDiv.profile .profile-item-edit-btn {
   position: absolute;
-  top: 2em;
-  right: 2em;
+  top: 2.5em;
+  right: 3em;
   margin-right: 1em;
   z-index: 10;
   height: 2.5em;
@@ -1557,7 +1574,7 @@ div.right-panel {
   vertical-align: top;
 }
 #mainDiv.profile .profile-item-container .view-container td {
-  padding: 0.6em 1em;
+  padding: 0.6em 1.5em 0.6em 0;
 }
 #mainDiv.profile .profile-item-container .view-container tr.study-id-view td {
   padding: 0.6em 1em 0 1em;
@@ -1810,6 +1827,7 @@ div.noOrg-container {
 }
 
  #profileStudyIDContainer {
+  margin-bottom: 2em;
   input {
     width: 30%;
     max-width: 100%;
@@ -2470,9 +2488,12 @@ div.timezone-warning.text-warning {
   .btn-tnth-primary {
     font-size: 0.95em;
   }
+  /************
   div.right-panel {
     margin-left: 0 !important;
    }
+   *************/
+   /***************
   #indexNavBar {
     display: block;
     max-width: 100%;
@@ -2488,6 +2509,7 @@ div.timezone-warning.text-warning {
       position: relative;
       top: 3px;
     }
+    ***************/
   }
 
   #wellContainer .tnth-well {
@@ -2674,9 +2696,10 @@ div.timezone-warning.text-warning {
   #indexNavBar, #indexContainer {
     display: none;
   }
+  /***************
   div.left-panel, a.back, a.open {
     display: block;
-  }
+  }***************/
 }
 @media (max-width: 828px) {
    div.right-panel {
