copyright text container element fix

--- a/portal/templates/flask_user/_macros.html
+++ b/portal/templates/flask_user/_macros.html
@@ -117,7 +117,7 @@
      <script>
         $(document).ready(function() {
             var __countryCode = "";
-            var footerElements = "footer .copyright, #homeFooter .copyright, .footer-container .copyright-container";
+            var footerElements = "footer .copyright, #homeFooter .copyright, .footer-container .copyright";
             var getContent = function(cc) {
                   var content = "";
                   switch(String(cc.toUpperCase())) {
