--- a/portal/templates/terms.html
+++ b/portal/templates/terms.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
-
+{% from "flask_user/_macros.html" import footer, back_btn %}
 {% block main %}
-{% from "flask_user/_macros.html" import back_btn %}
-
   {{ back_btn(PORTAL, _('Home')) }}
 
-    <h1 class="tnth-headline">{{ _("TrueNTH") }}</h1>
+    <h1 class="tnth-headline">{{ _("General Terms") }}</h1>
 	<div id = "termsConditionsContainer"><p>{{ content|safe }}</p></div>
 	{% if editorUrl %}
 		<script>appendLREditContainer($("#termsConditionsContainer"), "{{editorUrl}}", {% if user and user.has_role(ROLE.CONTENT_MANAGER) %}true{% else %}false{%endif%});</script>
 	{% endif %}
-
+{% endblock %}
+{% block footer %}
+{{footer(user=user)}}
 {% endblock %}
