--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -349,6 +349,40 @@ h4.detail-title {
   display: none;
 }
 /***** initial queries page style ****/
+#topTerms .custom-tou, 
+#topTerms .custom-tou-text {
+  display: none;
+}
+
+#topTerms .custom-tou-text a {
+  text-decoration: underline;
+}
+#topTerms .terms-checkbox-container {
+  margin-left: 2em;
+  margin-top: 0.5em;
+}
+#termsCheckbox {
+  width: 1000px;
+  max-width: 100%;
+}
+#termsCheckbox .display-view {
+  font-weight: normal;
+  display: none;
+  margin: 1em auto;
+}
+#termsCheckbox a.form-link {
+  text-decoration: underline;
+}
+.box-consent-container {
+  width: 300px;
+  max-width: 100%;
+  border-top: solid 1px #000;
+}
+.continue-msg-wrapper {
+  margin: 1em auto;
+  display: none;
+}
+
 #aboutForm {
   max-width: 100%;
   padding: 1em;
