--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -466,6 +466,36 @@ div.right-panel {
   margin: 1em auto;
   min-height: 50vh;
 }
+#topTerms {
+  .custom-tou-text a {
+    text-decoration: underline;
+  }
+  .terms-checkbox-container {
+    margin-left: 2em;
+    margin-top: 0.5em;
+  }
+}
+#termsCheckbox {
+  width: 1000px;
+  max-width: 100%;
+  .display-view {
+    font-weight: normal;
+    display: none;
+    margin: 1em auto;
+  }
+  a.form-link {
+  text-decoration: underline;
+  }
+}
+.box-consent-container {
+  width: 300px;
+  max-width: 100%;
+  border-top: solid 1px #000;
+}
+.continue-msg-wrapper {
+  margin: 1em auto;
+  display: none;
+}
 .terms-container {
   border-style:ridge;
   max-height: 250px;
