--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -397,6 +397,39 @@ h4.detail-title {
   margin: 1em 0;
   min-height: 20vh;
 }
+#topTerms .custom-tou, 
+#topTerms .custom-tou-text {
+  display: none;
+}
+
+#topTerms .custom-tou-text a {
+  text-decoration: underline;
+}
+#topTerms .terms-checkbox-container {
+  margin-left: 2em;
+  margin-top: 0.5em;
+}
+#termsCheckbox {
+  width: 1000px;
+  max-width: 100%;
+  .display-view {
+    font-weight: normal;
+    display: none;
+    margin: 1em auto;
+  }
+  a.form-link {
+    text-decoration: underline;
+  }
+}
+.box-consent-container {
+  width: 300px;
+  max-width: 100%;
+  border-top: solid 1px #000;
+}
+.continue-msg-wrapper {
+  margin: 1em auto;
+  display: none;
+}
 #aboutForm {
   .reg-complete-container {
     width: 350px;
