Fixed bug in eproms 'enter manually' - only seemed to affect iOS and Mac

--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1637,7 +1637,7 @@
 
         $(document).delegate("#meSubmit", "click", function(event){
             var method = "";
-            $("input[name='entryMethod'").each(function() {
+            $("input[name='entryMethod']").each(function() {
                 if ($(this).is(":checked")) {
                     method = $(this).val();
                 };
